--- a/TODO
+++ b/TODO
@@ -6,22 +6,49 @@
 ****  Bug
 ***** Nasty nasty nasty
 
+***** Merge up the 1.1 tree's SQL backend, and start squealing.
+
+***** Improve cadmin's code to the point where it doesn't suck.
+      cadmin will split into cadmin, which acutally talks to the server
+      itself through current.* api calls, and install.py, which gets enough
+      of the server setup to deal with current.* api calls.
+  
 ***** redo the logging so that current.log is empty for log_level 0 and 
       perhaps 1 - access_log and error_log are all we need there.
       Keep error_log very small at 0, and still quiet at 1.
+
+***** The logger probably needs to switch to string based levels, for 
+   implementation/namespace reasons. 
 
 *** we ignore channel versions during create/delete/listpackage. Fix that.
     Old channel versions might need to live for up to an hour, to give 
     "logged in" clients a chance to expire.
 
+** Fixup the perms checking code, and move it to the backend.
+
+** When we update, we should set a flag to only bump the channel version 
+   if we actually changed soemthing.
+
+* Instead of using a python based PythonTypeHandler setting the compression
+  headers, we could do a more advanced config with mod_header and set
+  the headers automatically for any listPackage or getPackageHeader request
+
+  mod_asis could probably also do this work, but I think mod_header 
+  would be better.
+
+* Cleanup terminology - its either an rpm, or a package. Pick one, change
+  the rest. Its a package.
+
 * labelCompare wants None as the epoch component, not "" (empty string)
   we have a helper function, which is wrong, but thats ok, as we don't 
   use it. narf.
 
-** The logger probably needs to switch to string based levels, for 
-   implementation/namespace reasons. 
+* Figure out how the heck to do sub-channels. Have to resolve deps using 
+  the sub-channel and its parent.
 
-
+* In the new web based, database backed current administrative system
+  (which does't exist) it would be cool to include mod_status and 
+  mod_config information.
 
 
 
