Correct Issuezilla #13, wrong url in spec file. Correct Makefile to use .cvsignore We're missing a bunch of changelog stuff.... Releasing 1.5.4
git-svn-id: http://current.tigris.org/svn/current/trunk@78 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
                         Current Project Changelog
 
+* Thu Apr  3 2003 Hunter Matthews <thm@duke.edu>
+- Somehow we've lost a TON of changelog entries. I'm not sure where they
+  went.
+- John tagged out 1.5.3 and 1.5.4. I'm getting 1.5.4 out the door tonight.
+- From John's tag, the only change I've made is correcting the Makefile 
+  and spec to be correct against tigris.org and we use CVS now.
+
 * Thu Oct 31 2002 Hunter Matthews <thm@duke.edu>
 - Finished up the cinstall initdb (pysqlite) code path.
   Finished here means "works for me" and has what I think will be needed.
