README fix for applet support.
I wonder if thats documented in the SGML yet?


git-svn-id: http://current.tigris.org/svn/current/trunk@126 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/README
+++ b/README
@@ -75,7 +75,7 @@ Status:
         out in current v1.4.4, and should not produce an error.
 
     rhn-applet:
-        Not working yet.
+        Fully support in v1.5.4 and later.
 
 Maintainers:
 Hunter Matthews <thm@duke.edu> 
