--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,16 +1,7 @@
 These are the user visible changes in Current from release to release.
 
-v1.5.5
-
-v1.5.4
-
-v1.5.3
-
-v1.5.2
-
-v1.5.1
-
 v1.5.0 
+- Oh wow.
 
 v1.4.4
 - Current is now compatible with the new rpm API introduced in rpm v4.1,
