--- a/TODO
+++ b/TODO
@@ -1,40 +1,24 @@
                        Current Server TODO List
 
-*     Minor nit
-**    Potential problem
-***   Cleanup needed
-****  Bug
-***** Nasty nasty nasty
+* redo the logging so that current.log is empty for log_level 0 and
+  perhaps 1 - access_log and error_log are all we need there.
+  Keep error_log very small at 0, and still quiet at 1.
+ 
+* we ignore channel versions during create/delete/listpackage. Fix that.
+  Old channel versions might need to live for up to an hour, to give
+  "logged in" clients a chance to expire.
+ 
+* labelCompare wants None as the epoch component, not "" (empty string)
+  we have a helper function, which is wrong, but thats ok, as we don't
+  use it. narf.
+ 
+* The logger probably needs to switch to string based levels, for
+  implementation/namespace reasons.
 
-***** Merge up the 1.1 tree's SQL backend, and start squealing.
+* Fixup the perms checking code, and move it to the backend.
 
-***** Improve cadmin's code to the point where it doesn't suck.
-      cadmin will split into cadmin, which acutally talks to the server
-      itself through current.* api calls, and install.py, which gets enough
-      of the server setup to deal with current.* api calls.
-  
-***** redo the logging so that current.log is empty for log_level 0 and 
-      perhaps 1 - access_log and error_log are all we need there.
-      Keep error_log very small at 0, and still quiet at 1.
-
-***** The logger probably needs to switch to string based levels, for 
-   implementation/namespace reasons. 
-
-*** we ignore channel versions during create/delete/listpackage. Fix that.
-    Old channel versions might need to live for up to an hour, to give 
-    "logged in" clients a chance to expire.
-
-** Fixup the perms checking code, and move it to the backend.
-
-** When we update, we should set a flag to only bump the channel version 
-   if we actually changed soemthing.
-
-* Instead of using a python based PythonTypeHandler setting the compression
-  headers, we could do a more advanced config with mod_header and set
-  the headers automatically for any listPackage or getPackageHeader request
-
-  mod_asis could probably also do this work, but I think mod_header 
-  would be better.
+* When we update, we should set a flag to only bump the channel version 
+   if we actually changed something.
 
 * Cleanup terminology - its either an rpm, or a package. Pick one, change
   the rest. Its a package.
@@ -49,6 +33,21 @@
 * In the new web based, database backed current administrative system
   (which does't exist) it would be cool to include mod_status and 
   mod_config information.
+
+
+1.6.0 ship checklist
+
+More Code cleanups in general
+Move all the db portable code from postgres.py to currentdb.py
+Remove the src/bin distinction 
+Make the scanning recursive.
+Add cadmin API calls for querying
+Add input checking into cadmin
+Clean up the cmd line parsing in cadmin
+Redo the deps handling in the database
+Check on the use of transactions (where, how many, etc)
+
+and poof, we're done. <sigh>
 
 
 
